2008-09-02  Jari Aalto  <jari.aalto@cante.net>

	* tinylisp.el (tinylisp-library-locate-library-1):
	Improve docstring (Return value part). Make faster by
	moving `file-name-nondirectory' out of loops.

	* tinylisp.el (tinylisp-jump-to-definition): Support
	compressed .el.gz files

2008-08-21  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinylisp.el (tinylisp-autoload-generate-library): Support
	compressed .el files. Emacs 22.x fix.

	* tiny/tinyliba.el (top level): Call `ti::tmp-cl-library-check'
	only for Emacs 21.x and lower.
	(vc-hooks): Updated autoloads for Emacs 22.x

2008-08-11  Jari Aalto  <jari.aalto@cante.net>

	* tiny/tinycygwin.el
	(top level): require message.el
	(tinycygwin-file-buffer): Use
	`insert-file-contents-literally'.
	(tinycygwin-package-wnpp-main): Correct `if'.
	(eval-when-compile): require message.el
	(eval-and-compile): autoload `message-fetch-field'.
	(tinycygwin-font-lock-keywords): Fix `cond' daemon.log.
	(tinycygwin-bug-report-batch-setup-general): Remove variable
	`resize-minibuffer-mode'

	* tiny/tinytag.el (tinytag-:output-buffer): Fix defcustom.

	* tiny/tinyperl.el (tinyperl-pause-upload-via-ftp): Use
	`insert-file-contents'.
	(tinyperl-perldoc): Fix variable `cmd' and format.
	(tinyperl-pod-by-module): Replace `pathname' with path.
	Was error: 'unused variable path'.
	(tinyperl-verbose-macro): Update to modern backquote.
	(tinyperl-directory-files): Update to modern backquote.
	(tinyperl-executable-set): Update to modern backquote.
	(tinyperl-version-macro): Update to modern backquote.
	(tinyperl-podchecker): Use `compilation-start'.

	* tiny/tinypad.el (ti::macrof-minor-mode-wizard): Replace
	`find-file-hooks' with (ti::compath-find-file-hook).

	* tiny/tinygnus.el (tinygnus-uff-summary-date): Use
	`string-to-number'.
	(autoload time-stamp-string): new.
	(tinygnus-set-group): Update to modern backquote.
	(tinygnus-summary-map-articles-macro): Update to modern backquote.